2004-08-05  Edd Dumbill  <edd@usefulinc.com>

	* TODO: remove completed tasks.

2004-07-20  Edd Dumbill  <edd@usefulinc.com>

	* examples/StreamTest.cs: (ParseAsStream ()): fix for streams.
	(IterateModel ()): fix for iterators.
	(FindStatements1 ()): fix for iterators.
	(FindStatementsWithContext ()): fix for iterators.

	* Iterator.cs: (MoveNext ()): handle case where iterator is empty.

	* Stream.cs: (MoveNext ()): handle case where stream is empty.

	* Uri.cs: (Uri (IntPtr)): add internal constructor to build Uri
	from a Redland URI.

	* Node.cs: (Uri): add property to get underlying Redland URI.

	* Errors.cs: (RedlandError): new constructor with no log messages.

	* Node.cs: Add NodeType enumeration.
	(Type): add new property to get type
	(IsResource ()): return true if resource.
	(IsLiteral ()): return true if literal.
	(IsBlank ()): return true if blank.

2004-07-20  Edd Dumbill  <edd@usefulinc.com>

	* Stream.cs: (GetEnumerator ()): Implement IEnumerable.
	(MoveNext ()): Properly implement: at start, position should be
	before the first element, not on it.

	* Iterator.cs: (GetEnumerator ()): Implement IEnumerable.
	(MoveNext ()): Properly implement: at start, position should be
	before the first element, not on it.

	* test.cs: Fix to work with iterator fixes.

2004-07-14  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* Serializer.cs:
	(Serializer (World world, string name, string mime_type, Uri
	type_uri)): Replace cast to Object with use of Uri.operator==

	* Uri.cs (Equals, operator ==, operator !=, GetHashCode): Added.

	* Statement.cs:
	(Statement (World world, Node subject, Node predicate, Node obj)):
	Removed casts to Object and allow calls to Node.operator!=

	* Node.cs (operator ==, operator !=):
	Added tests for null using Object.Equals
	written by Edd Dumbill.

	* Redland.cs, MemoryStorage.cs, Iterator.cs, IWrapper.cs,
	HashStorage.cs, URI.cs: Added CVS IDs to the header.

2004-07-14  Edd Dumbill  <edd@usefulinc.com>

	* examples/example2.cs: